--- a/.gitignore
+++ b/.gitignore
@@ -114,13 +114,13 @@ ENV/
 # git has its own built in compression methods
 *.7z
 *.dmg
-*.gz
+# *.gz
 *.iso
 *.jar
 *.rar
 *.tar
 #*.zip
-*.tar.gz
+# *.tar.gz
 
 # Logs and databases #
 ######################
